Removed unnecessary library.

--- a/t_ranges/makefile
+++ b/t_ranges/makefile
@@ -1,5 +1,5 @@
 all: t_investigation
 
 t_investigation: t_investigation.cc
-	g++ -g -O3 -Wall `root-config --libs` -lMinuit2 `root-config --cflags`\
+	g++ -g -O3 -Wall `root-config --libs` `root-config --cflags`\
 		t_investigation.cc -o t_investigation
