Added new t-investigation script.

--- a/t_ranges/makefile
+++ b/t_ranges/makefile
@@ -1,5 +1,9 @@
-all: t_investigation
+all: t_investigation t_investigation_new
 
 t_investigation: t_investigation.cc
 	g++ -g -O3 -Wall `root-config --libs` `root-config --cflags`\
 		t_investigation.cc -o t_investigation
+
+t_investigation_new: t_investigation_new.cc ../datasets.h ../stat.h
+	g++ -g -O3 -Wall `root-config --libs` `root-config --cflags`\
+		t_investigation_new.cc -o t_investigation_new
