--- a/t_ranges/makefile
+++ b/t_ranges/makefile
@@ -1,9 +1,5 @@
-all: t_investigation t_investigation_new
+all: t_investigation
 
 t_investigation: t_investigation.cc
 	g++ -g -O3 -Wall `root-config --libs` `root-config --cflags`\
 		t_investigation.cc -o t_investigation
-
-t_investigation_new: t_investigation_new.cc ../datasets.h ../stat.h
-	g++ -g -O3 -Wall `root-config --libs` `root-config --cflags`\
-		t_investigation_new.cc -o t_investigation_new
